# CreatorFlow-AI--Backend

./: .env.example  .gitignore  README.md  migrate_script_data.py  pyproject.toml  requirements.txt  scratch_test.py  test_workflow.py
app/: config.py  main.py
app/agents/: base_agent.py  content_agent.py  critic_agent.py  script_agent.py  seo_agent.py  topic_agent.py
app/api/: routes.py
app/models/: __init__.py
app/prompts/: community_post.txt  content_critic.txt  marketing_strategy.txt  post_image_prompt.txt  script_generation.txt  seo_description.txt  seo_package.txt  seo_title.txt  thumbnail_prompt.txt  topic_generation.txt
app/utils/: channel_profile.py  llm_factory.py  logger.py  prompt_loader.py  similarity_checker.py  vector_store.py
app/workflow/: graph.py  state.py
scratch/: fetch_models.py
