[project]
name = "yta-system-backend"
version = "0.1.0"
description = "Backend for YTA-System content generation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langchain>=0.1.6",
    "langchain-openai>=0.0.5",
    "langgraph>=0.0.20",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "openai>=1.10.0",
    "tiktoken>=0.5.0",
    "httpx>=0.26.0",
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "chromadb>=0.4.24",
    "langchain-chroma>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "langsmith>=0.7.30",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.4",
]
